published swagger updates
