# models/library.go
@@ -7,13 +7,16 @@ import (
 )
 
 type CreateLibraryRequest struct {
-	Title       string        `json:"title" bson:"title" binding:"required"`
-	Description string        `json:"description" bson:"description" binding:"required"`
-	Owner       *UserResponse `json:"owner" bson:"owner"`
-	Image       string        `json:"image,omitempty" bson:"image,omitempty"`
-	Public      bool          `json:"public" bson:"public"`
-	CreatedAt   time.Time     `json:"created_at" bson:"createdAt"`
-	UpdatedAt   time.Time     `json:"updatedAt" bson:"updatedAt" `
+	Title       string           `json:"title" bson:"title" binding:"required"`
+	Description string           `json:"description" bson:"description" binding:"required"`
+	Owner       *UserResponse    `json:"owner" bson:"owner"`
+	Image       *[]ImageResponse `json:"images,omitempty" bson:"images,omitempty"`
+	Public      bool             `json:"public" bson:"public"`
+	Likes       int              `json:"likes" bson:"likes"`
+	Views       int              `json:"views" bson:"views"`
+	Featured    bool             `json:"featured" bson:"featured"`
+	CreatedAt   time.Time        `json:"created_at" bson:"createdAt"`
+	UpdatedAt   time.Time        `json:"updatedAt" bson:"updatedAt" `
 }
 
 type DBLibrary struct {
@@ -21,18 +24,21 @@ type DBLibrary struct {
 	Title       string             `json:"title" bson:"title" binding:"required"`
 	Description string             `json:"description" bson:"description" binding:"required"`
 	Owner       *UserResponse      `json:"owner" bson:"owner"`
-	Image       string             `json:"image,omitempty" bson:"image,omitempty"`
+	Images      *[]ImageResponse   `json:"images,omitempty" bson:"images,omitempty"`
 	Public      bool               `json:"public" bson:"public"`
+	Likes       int                `json:"likes" bson:"likes"`
+	Views       int                `json:"views" bson:"views"`
+	Featured    bool               `json:"featured" bson:"featured"`
 	CreatedAt   time.Time          `json:"created_at" bson:"createdAt"`
 	UpdatedAt   time.Time          `json:"updatedAt" bson:"updatedAt"`
 }
 
 type UpdateLibrary struct {
-	Title       string        `json:"title" bson:"title" binding:"required"`
-	Description string        `json:"description" bson:"description" binding:"required"`
-	Owner       *UserResponse `json:"owner" bson:"owner"`
-	Image       string        `json:"image,omitempty" bson:"image,omitempty"`
-	Public      bool          `json:"public" bson:"public"`
-	CreatedAt   time.Time     `json:"created_at" bson:"createdAt"`
-	UpdatedAt   time.Time     `json:"updatedAt" bson:"updatedAt"`
+	Title       string           `json:"title" bson:"title" binding:"required"`
+	Description string           `json:"description" bson:"description" binding:"required"`
+	Images      *[]ImageResponse `json:"images,omitempty" bson:"images,omitempty"`
+	Public      bool             `json:"public" bson:"public"`
+	Featured    bool             `json:"featured" bson:"featured"`
+	CreatedAt   time.Time        `json:"created_at" bson:"createdAt"`
+	UpdatedAt   time.Time        `json:"updatedAt" bson:"updatedAt"`
 }
