# models/user.go
@@ -16,10 +16,10 @@ const (
 
 // SignUpInput 👈 SignUpInput struct
 type SignUpInput struct {
-	Username           string           `json:"username" bson:"username" binding:"required"`
-	Email              string           `json:"email" bson:"email" binding:"required"`
-	Password           string           `json:"password" bson:"password" binding:"required,min=8"`
-	PasswordConfirm    string           `json:"passwordConfirm" bson:"passwordConfirm,omitempty" binding:"required"`
+	Username        string `json:"username" bson:"username" binding:"required"`
+	Email           string `json:"email" bson:"email" binding:"required"`
+	Password        string `json:"password" bson:"password" binding:"required,min=8"`
+	PasswordConfirm string `json:"passwordConfirm" bson:"passwordConfirm,omitempty" binding:"required"`
 	// RawPassword        string           `json:"raw_password"`
 	Role               UserRole         `json:"role" bson:"role"`
 	VerificationCode   string           `json:"verificationCode,omitempty" bson:"verificationCode,omitempty"`
@@ -27,10 +27,7 @@ type SignUpInput struct {
 	ResetPasswordAt    time.Time        `json:"resetPasswordAt,omitempty" bson:"resetPasswordAt,omitempty"`
 	Verified           bool             `json:"verified" bson:"verified"`
 	IsFirstLogin       bool             `json:"is_first_login" bson:"is_first_login"`
-	Followers          int              `json:"Followers" bson:"followers"`
-	Following          int              `json:"following" bson:"following"`
-	Images             *[]ImageResponse `json:"images" bson:"images"`
-	Library            *[]DBLibrary     `json:"libraries" bson:"libraries"`
+
 	CreatedAt          time.Time        `json:"created_at" bson:"created_at"`
 	UpdatedAt          time.Time        `json:"updated_at" bson:"updated_at"`
 }
@@ -47,34 +44,27 @@ type DBResponse struct {
 	Username           string             `json:"username" bson:"username"`
 	Email              string             `json:"email" bson:"email"`
 	Password           string             `json:"password" bson:"password"`
-	PasswordConfirm    string             `json:"passwordConfirm,omitempty" bson:"passwordConfirm,omitempty"`
-	// RawPassword        string           `json:"raw_password"`
 	Role               UserRole           `json:"role" bson:"role"`
 	VerificationCode   string             `json:"verificationCode,omitempty" bson:"verificationCode"`
 	ResetPasswordToken string             `json:"resetPasswordToken,omitempty" bson:"resetPasswordToken,omitempty"`
 	ResetPasswordAt    time.Time          `json:"resetPasswordAt,omitempty" bson:"resetPasswordAt,omitempty"`
 	Verified           bool               `json:"verified" bson:"verified"`
 	IsFirstLogin       bool               `json:"is_first_login" bson:"is_first_login"`
-	Followers          int                `json:"Followers" bson:"followers"`
+	Followers          int                `json:"followers" bson:"followers"`
 	Following          int                `json:"following" bson:"following"`
+	Images             *[]ImageResponse `json:"images" bson:"images"`
+	Library            *[]DBLibrary     `json:"libraries" bson:"libraries"`
 	CreatedAt          time.Time          `json:"created_at" bson:"created_at"`
 	UpdatedAt          time.Time          `json:"updated_at" bson:"updated_at"`
 }
 
 type UpdateInput struct {
-	Name               string    `json:"name,omitempty" bson:"name,omitempty"`
-	Email              string    `json:"email,omitempty" bson:"email,omitempty"`
-	Password           string    `json:"password,omitempty" bson:"password,omitempty"`
-	Role               UserRole  `json:"role,omitempty" bson:"role,omitempty"`
-	VerificationCode   string    `json:"verificationCode,omitempty" bson:"verificationCode,omitempty"`
-	ResetPasswordToken string    `json:"resetPasswordToken,omitempty" bson:"resetPasswordToken,omitempty"`
-	ResetPasswordAt    time.Time `json:"resetPasswordAt,omitempty" bson:"resetPasswordAt,omitempty"`
-	Verified           bool      `json:"verified,omitempty" bson:"verified,omitempty"`
-	IsFirstLogin       bool      `json:"is_first_login" bson:"is_first_login"`
-	Followers          int       `json:"Followers" bson:"followers"`
-	Following          int       `json:"following" bson:"following"`
-	CreatedAt          time.Time `json:"created_at,omitempty" bson:"created_at,omitempty"`
-	UpdatedAt          time.Time `json:"updated_at,omitempty" bson:"updated_at,omitempty"`
+	Username            string    `json:"username,omitempty" bson:"username,omitempty"`
+	Email           string    `json:"email,omitempty" bson:"email,omitempty"`
+	Password        string    `json:"password,omitempty" bson:"password,omitempty"`
+	Role            UserRole  `json:"role,omitempty" bson:"role,omitempty"`
+	ProfileImage    string    `json:"profile_image,omitempty" bson:"profile_image,omitempty"`
+	UpdatedAt       time.Time `json:"updated_at" bson:"updated_at"`
 }
 
 // 👈 UserResponse struct
@@ -83,6 +73,10 @@ type UserResponse struct {
 	Username  string             `json:"username,omitempty" bson:"username,omitempty"`
 	Email     string             `json:"email,omitempty" bson:"email,omitempty"`
 	Role      string             `json:"role,omitempty" bson:"role,omitempty"`
+	Followers          int              `json:"Followers" bson:"followers"`
+	Following          int              `json:"following" bson:"following"`
+	Images             *[]ImageResponse `json:"images" bson:"images"`
+	Library            *[]DBLibrary     `json:"libraries" bson:"libraries"`
 	CreatedAt time.Time          `json:"created_at" bson:"created_at"`
 	UpdatedAt time.Time          `json:"updated_at" bson:"updated_at"`
 }
@@ -106,5 +100,9 @@ func FilteredResponse(user *DBResponse) UserResponse {
 		Role:      string(user.Role),
 		CreatedAt: user.CreatedAt,
 		UpdatedAt: user.UpdatedAt,
+		Followers: user.Followers,
+		Following: user.Following,
+		Images:    user.Images,
+		Library:   user.Library,
 	}
 }
